# Molten-Engine

./: .gitmodules  CMakeLists.txt
Molten/src/: mltnpch.h
Molten/src/Engine/Core/: Application.cpp  Application.h  Base.h  EntryPoint.cpp  Log.cpp  Log.h  Window.h
Molten/src/Engine/Renderer/: GraphicsContext.h
Molten/src/Platform/MacOS/: MacOSWindow.cpp  MacOSWindow.h
Molten/src/Platform/Metal/: MetalContext.cpp  MetalContext.h  MetalDevice.cpp  MetalDevice.h
Molten/src/Platform/Metal/Adapters/: GLFWAdapter.h  GLFWAdapter.mm
